# boilerplate-rust-backend

./: Cargo.toml
src/: config.rs  db.rs  main.rs  models.rs  routes.rs
src/handlers/: analytics.rs  mod.rs  transactions.rs
src/services/: analytics.rs  mod.rs  transaction_watcher.rs
