[package]
name = "boiler_plate_rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ethers = "2.0.14"
